Fixed height not covering full scroll height

--- a/src/app/weaklyPrices/weaklyPrices.css
+++ b/src/app/weaklyPrices/weaklyPrices.css
@@ -35,7 +35,8 @@ body {
     align-items: center;
     background-color: #ffe99a;
     color: #000080;
-    height: 100%;
+    min-height: 100vh;
+    max-height: 100%;
 }
 
 .page-title {
